syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.sep3.grpc";
option java_outer_classname = "BaseTypesProto";

package proto;

message EmptyMessage {

}

message IdRequestResponse {
  string id = 1;
}
message EmailRequestResponse {
  string email = 1;
}

message BusinessOnMap {
  double latitude = 1;
  double longitude = 2;
  string logoPath = 3;
  string businessName = 4;
  string businessId = 5;
  string businessEmail = 6;
}

message BusinessesInRadiusResponse {
  repeated BusinessOnMap businesses = 1;
}

message Address {
  string street = 1;
  string number = 2;
  string city = 3;
  string county = 4;
  string state = 5;
  string country = 6;
  string postalCode = 7;
}

message Location {
  double latitude = 1;
  double longitude = 2;
  int32 radius  = 3;
}
